testsuite/tests/typecheck/should_fail/T3155.stderr

T3155.hs:14:9: error: [GHC-25955]
    Illegal symbol ‘forall’ in type
    Suggested fix:
      Use ExplicitForAll
      to enable syntax: forall <tvs>. <type>
